--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" th:href="@{/css/enter.css}" />
 </head>
 <body>
-<!--&lt;!&ndash;sec:authorize="hasAuthority('ADMIN')"&ndash;&gt;-->
-<!--<div class="login__sign-in-up">-->
-<!--    <a href="/login" class="sign sign-border">Log in</a>-->
-<!--    <a href="/registration" class="sign sign-border">Sign up</a>-->
-<!--</div>-->
+<!--sec:authorize="hasAuthority('ADMIN')"-->
+<div class="login__sign-in-up">
+    <a href="/login" class="sign sign-border">Log in</a>
+    <a href="/registration" class="sign sign-border">Sign up</a>
+</div>
 <div class="enter d-flex">
     <div class="enter__left">
         <img src="/images/svg/enterSvg.svg" alt="fonendoscope" />
