--- a/src/main/resources/static/css/service.css
+++ b/src/main/resources/static/css/service.css
@@ -8,13 +8,9 @@
   font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
-
 body {
   background: #fbfcfe;
 }
-a{
- text-decoration: none !important;
- }
 .d-flex {
   display: flex;
   align-items: center;
@@ -61,20 +57,20 @@ p {
 }
 .service-images {
   align-items: end !important;
-  width: 80%;
+  width: 79%;
   margin: 0 auto;
 }
 /* ------------------------------------- */
 
 .service-choose {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   flex-wrap: wrap;
   margin-top: 3%;
+  margin-bottom: 5%;
 }
 .dropdown {
   margin-top: 3%;
-  margin-left: 20px;
 }
 .btn {
   display: flex !important;
@@ -84,21 +80,24 @@ p {
   opacity: 0.5 !important;
   box-shadow: 5px 5px 5px rgba(22, 21, 72, 0.15) !important;
   border-radius: 10px !important;
+  padding: 3px 15px !important;
 }
-.btn img{
-  margin-top: 8px;
+.a{
+
+  width: 430px;
+  justify-content: space-between !important;
+  align-items: center !important;
 }
-.arrow-down{
-    margin-top: 15px;
-}
+
 .dropdown-item {
   width: 470px !important;
 }
-h5{
-font-weight: 400;
-font-size: 16px;
-line-height: 47px;
-text-align: center;
-color: #2D3582 !important;
-margin: 0 40%;
+.a h5{
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 47px;
+  text-align: center;
+  color: #2D3582 !important;
 }
