--- a/src/main/resources/static/css/cardServ.css
+++ b/src/main/resources/static/css/cardServ.css
@@ -39,12 +39,15 @@ h2, h4{
   background: #ffecce;
   border-radius: 10px;
   align-items: flex-start;
+  height:302px;
+
 }
 .first-block__left {
-  padding: 60px 40px;
+  padding: 40px;
 }
 .first-block__right {
-  padding: 50px 25px;
+width:100%;
+  padding: 50px;
 }
 
 .content {
