--- a/src/main/resources/templates/block/footer.html
+++ b/src/main/resources/templates/block/footer.html
@@ -22,6 +22,6 @@
         <a href="/">Что такое полис ОМС?</a>
         <a href="/">Как полчуть пароль для входа?</a>
         <a href="/">Как сделать запись на прием?</a>
-        <a href="">Смотреть больше...</a>
+        <a href="/questions">Смотреть больше...</a>
     </div>
 </footer>
