--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
     <div class="med-service__left">
         <h1 th:text="${value[0].title}"></h1>
         <p th:text="${value[0].subtitle}"></p>
-        <a href="/">какие есть возможности</a>
+        <a href="https://t.me/kyrgyztourswow_bot">какие есть возможности</a>
     </div>
     <div class="med-service__right">
         <img src="/images/img/main-intro.png" alt="doctors-img" />
