--- a/src/main/resources/templates/personalPage/user.html
+++ b/src/main/resources/templates/personalPage/user.html
@@ -1,17 +1,145 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Личный кабинет</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Кабинет</title>
+    <link rel="stylesheet" th:href="@{/css/base.css}" />
+    <link rel="stylesheet" th:href="@{/css/medCard.css}" />
 </head>
 <body>
-<p th:text="${user.citizen.name}"></p>
-<div th:each="r : ${user.roles}">
-    <p th:text="${r}"></p>
+<div th:insert="block/header :: header"></div>
+<div class="blue-block"></div>
+<div class="content d-flex">
+    <div class="content__left">
+        <div class="name d-flex">
+            <br>
+            <img src="/images/img/main-staff.png" alt="" />
+            <h4>Кемелова Алтынай</h4>
+            <br>
+        </div>
+        <div class="info">
+            <span>Дата рождения</span>
+            <h6>07.09.2004</h6>
+            <div>
+                <span>Пол</span>
+                <h6>Жен</h6>
+            </div>
+            <span>Регион, город</span>
+            <h6>Чуйская область г.Бишкек</h6>
+            <span>Поликлиника</span>
+            <h6>Поликлиника №8</h6>
+            <div class="info__blue">
+                <span>Номер</span>
+                <h6>0228905950</h6>
+                <span>Email</span>
+                <h6>satkynovaz@gmail.com</h6>
+            </div>
+        </div>
+    </div>
+    <div class="content__right">
+        <div class="content__right d-flex">
+            <h5>
+                МЕДИЦИНСКАЯ КАРТА <br />
+                амбулаторного больного № 0228905950
+            </h5>
+            <div class="cont d-flex">
+                <div class="left">
+                    <div class="line d-flex">
+                        <h6>ФИО:</h6>
+                        <span>Саткынова Жанара Алмазовна</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Пол:</h6>
+                        <span>Жен</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Дата рождения:</h6>
+                        <span>07.09.2004</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Телефон:</h6>
+                        <span>996555123456</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Адрес:</h6>
+                        <span>г.Бишкек 5мкр 23/4</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Место работы:</h6>
+                        <span>--</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Профессия, должность:</h6>
+                        <span>--</span>
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="line d-flex">
+                        <h6>ФИО:</h6>
+                        <span>Саткынова Жанара Алмазовна</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Пол:</h6>
+                        <span>Жен</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Дата рождения:</h6>
+                        <span>07.09.2004</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Телефон:</h6>
+                        <span>996555123456</span>
+                    </div>
+
+                    <div class="line d-flex">
+                        <h6>Адрес:</h6>
+                        <span>г.Бишкек 5мкр 23/4</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Место работы:</h6>
+                        <span>--</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Профессия, должность:</h6>
+                        <span>--</span>
+                    </div>
+                </div>
+                <div class="left">
+                    <div class="line d-flex">
+                        <h6>ФИО:</h6>
+                        <span>Саткынова Жанара Алмазовна</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Пол:</h6>
+                        <span>Жен</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Дата рождения:</h6>
+                        <span>07.09.2004</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Телефон:</h6>
+                        <span>996555123456</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Адрес:</h6>
+                        <span>г.Бишкек 5мкр 23/4</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Место работы:</h6>
+                        <span>--</span>
+                    </div>
+                    <div class="line d-flex">
+                        <h6>Профессия, должность:</h6>
+                        <span>--</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<form action="/add" method="post" enctype="multipart/form-data">
-    <textarea name="question" placeholder="Ваш вопрос"></textarea><br>
-    <button type="submit">Добавить</button>
-</form>
+<br><br><br><br><br><br>
+<div th:insert="block/footer :: footer"></div>
 </body>
 </html>
